--- a/static/upd-main.css
+++ b/static/upd-main.css
@@ -460,35 +460,20 @@ button {
 }
 
 .btn-small-outlined {
-  font-size: 0.75rem;
-  line-height: 1rem;
-  font-weight: 600;
-  border-radius: 0.5rem;
-  padding: 0.375rem 1rem;
   border: 1px solid var(--color-border-primary);
   color: var(--color-btn-outlined);
   background: transparent;
-  box-shadow: none;
-  display: inline-flex !important;
-  flex-direction: row;
-  align-items: center;
-  gap: .5rem;
+  
+  &:hover {
+    background-color: var(--color-btn-hover-bg);
+  }
 }
 
 .btn-small-outlined-danger {
-  font-size: 0.75rem;
-  line-height: 1rem;
-  font-weight: 600;
-  border-radius: 0.5rem;
   padding: 0.375rem 0.5rem;
   border: 1px solid var(--color-border-primary);
   color: var(--color-btn-outlined);
   background: transparent;
-  box-shadow: none;
-  display: inline-flex !important;
-  flex-direction: row;
-  align-items: center;
-  gap: .5rem;
 
   &::after {
     content: url(img/icon-cross.svg);
@@ -961,11 +946,6 @@ footer .logo {
 #user-menu li {
   display: inline-block;
   margin: 0 8px;
-}
-
-#user-info {
-  margin-left: 10px;
-  color: var(--color-text-inverse);
 }
 
 #menu>ul {
