--- a/static/main.css
+++ b/static/main.css
@@ -458,7 +458,7 @@ button {
   border: 1px solid var(--color-border-primary);
   color: var(--color-btn-outlined);
   background: transparent;
-  
+
   &:hover {
     background-color: var(--color-btn-hover-bg);
   }
@@ -1022,7 +1022,7 @@ footer .logo {
     width: 40%;
     justify-content: center;
     display: flex;
-    
+
     input {
       display: inline-block;
       margin: 0;
@@ -1837,32 +1837,34 @@ pre.arguments .inactive-argument:before {
 }
 
 .btn-icon {
-  background: transparent;
-  border: 1px solid var(--color-border-primary);
+  --icon-background: none;
   display: flex;
-  width: 45px;
-  height: 45px;
-  padding: 6px 8px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 4px;
   flex-shrink: 0;
+  padding: 6px 8px;
   border-radius: 8px;
+  border: 1px solid var(--color-border-primary);
+  background: transparent;
 
   &:hover {
     background-color: var(--color-btn-hover-bg);
   }
 
-  &.btn-reset {
-    background-image: url(img/icon-x.svg);
-    background-repeat: no-repeat;
-    background-position: center center;
+  &::before {
+    background: no-repeat center var(--icon-background);
+    height: 12px;
+    content: "";
+    width: 12px;
   }
 
-  &.btn-submit {
-    background-image: url(img/icon-checkbox.svg);
-    background-repeat: no-repeat;
-    background-position: center center;
+  &:is(.btn-reset) {
+    --icon-background: url(img/icon-x.svg);
+  }
+
+  &:is(.btn-submit) {
+    --icon-background: url(img/icon-checkbox.svg);
   }
 }
 
