Show toggle menu button tooltip when menu is expanded

--- a/static/main.css
+++ b/static/main.css
@@ -1123,6 +1123,10 @@ footer .logo {
       padding-left: 68px;
     }
   }
+
+  .menu-tooltip:hover .toggle-menu-label {
+    opacity: 1;
+  }
 }
 
 .card:has(.table-header) {
