--- a/static/main.css
+++ b/static/main.css
@@ -1380,6 +1380,10 @@ footer .logo {
   color: var(--color-text-muted);
 }
 
+#cp-capabilities {
+  white-space: pre-line;
+}
+
 #q-features span,
 #e-features span {
   cursor: help;
